--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=pizzaria-inf2am
 
 server.port=8080
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=bd_pizzaria_2A;integratedSecurity=false;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=Bd_CadastroClientes;integratedSecurity=false;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=@ITB123456
+spring.datasource.password=pitango10
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+
+api.security.token.secret=myKey12345
